Movie Clip Editor - Mask Pivot Point individual origins doesnt work #37757

Closed
opened 2013-12-10 08:32:06 +01:00 by Carlo Andreacchio · 6 comments

System Information
Windows 7 x64 gtx 580

Blender Version
Broken: Blender 2.69 #d74d6c7

Short description of error
When dealing with the mask editor, with the pivot center set to individual origins, it acts as if it was the median point instead of individual origins

Exact steps for others to reproduce the error

  1. Open blender
  2. switch to movie clip editor
  3. load up image / movie
  4. switch to mask editor mode
  5. ctrl click a few times in the editor
  6. mash a until all points are selected
  7. change pivot point to individual origins
  8. note that it isnt actually individual origins.
**System Information** Windows 7 x64 gtx 580 **Blender Version** Broken: Blender 2.69 #d74d6c7 **Short description of error** When dealing with the mask editor, with the pivot center set to individual origins, it acts as if it was the median point instead of individual origins **Exact steps for others to reproduce the error** 1. Open blender 2. switch to movie clip editor 3. load up image / movie 4. switch to mask editor mode 5. ctrl click a few times in the editor 6. mash a until all points are selected 7. change pivot point to individual origins 8. note that it isnt actually individual origins.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio
Sergey Sharybin was assigned by Brecht Van Lommel 2013-12-10 17:01:02 +01:00

This issue was referenced by blender/blender-addons-contrib@a0a09d1423

This issue was referenced by blender/blender-addons-contrib@a0a09d14233b7928418205cdcd82227823a1315e

This issue was referenced by a0a09d1423

This issue was referenced by a0a09d14233b7928418205cdcd82227823a1315e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a0a09d1423.

Closed by commit a0a09d1423.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37757
No description provided.