Fix T37757: MCE - Mask Pivot Point individual origins doesnt work

Simple wasn't implemented.